Menambahkan Onboarding, SplashScreen, Icon Apk

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SetaraApp</string>
+    <string name="app_name">Setara</string>
     <string name="onBoardingTitle1">Selamat Datang di Setara!</string>
     <string name="onBoardingTitle2">Buat CV dan Latihan Interview</string>
     <string name="onBoardingTitle3">Daftar ke Perusahaan Impianmu</string>
